# hospital-openENV

./: .gitignore  Dockerfile  README.md  inference.py  pyproject.toml  requirements.txt  streamlit_app.py
env/: evaluator.py  evolver.py  generator.py  hospital_env.py  llm.py  models.py  prompts.py  rewards.py  scenarios.py  tasks.py  tools.py
scripts/: dashboard.py  run_baseline.py
server/: app.py  app_openenv.py
tests/: verify_brain.py
